Fix view on mobile

--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -73,6 +73,7 @@
   margin-bottom: 3em;
   text-align: center;
   z-index: 10;
+  margin-top: 3em;
 }
 
 .site-title {
